# TokenLens

./: .gitignore  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
collectors/opencode-plugin/: README.md  package.json  tokenlens.ts  tsconfig.json
docs/: README.md  data-model.md  pricing-research-preset.md  privacy.md
pricing/: context-windows.json  pricing-seed-2026.json
scripts/: capture-readme-screenshots.mjs  gen-icons.cjs  rebuild-icns.cjs  sync-version.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: cursor-login.json  default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_cursor_credentials.sql  002_future.sql  003_compress_raw_json.sql  004_file_offsets_mtime.sql  005_context_window_tokens.sql
src-tauri/src/: errors.rs  lib.rs  main.rs  raw_json_codec.rs  types.rs
src-tauri/src/aggregation/: mod.rs
src-tauri/src/alerts/: mod.rs
src-tauri/src/collectors/: lmstudio.rs  mod.rs  opencode.rs  opencode_db.rs  veyra.rs
src-tauri/src/collectors/cursor/: api.rs  auth.rs  login.rs  mod.rs  normalize.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ingest/: dedup.rs  mod.rs
src-tauri/src/pricing/: mod.rs
src-tauri/src/redaction/: mod.rs
src-tauri/src/scan/: mod.rs
src-tauri/src/token_estimator/: mod.rs
src-tauri/src/watcher/: mod.rs
src/charts/: index.tsx
src/components/: AppUpdater.tsx  ZoomManager.tsx
src/components/layout/: MobileNav.tsx  PageHeader.tsx  Sidebar.tsx  Topbar.tsx
src/components/ui/: primitives.tsx  toaster.tsx
src/lib/: cost.ts  mock.ts  tauri.ts  utils.ts
src/pages/: Costs.tsx  Insights.tsx  Models.tsx  Overview.tsx  Projects.tsx  Providers.tsx  RawEvents.tsx  SessionDetail.tsx  Sessions.tsx  Settings.tsx  Timeline.tsx
src/stores/: dataRevision.ts  filter.ts  nanoid.ts  theme.ts  toast.ts  zoom.ts
src/types/: contracts.ts
tokenlens/: .gitignore  LICENSE  README.md  vite.config.js  vite.config.ts
tokenlens/docs/: architecture.md  data-model.md
tokenlens/pricing/: pricing-seed-2026.json
tokenlens/src/: App.tsx
tokenlens/src-tauri/: Cargo.toml  tauri.conf.json
tokenlens/src-tauri/capabilities/: default.json
tokenlens/src-tauri/migrations/: 001_init.sql
tokenlens/src-tauri/src/: errors.rs  lib.rs  types.rs
tokenlens/src-tauri/src/aggregation/: mod.rs
tokenlens/src-tauri/src/alerts/: mod.rs
tokenlens/src-tauri/src/collectors/: mod.rs
tokenlens/src-tauri/src/commands/: mod.rs
tokenlens/src-tauri/src/db/: mod.rs
tokenlens/src-tauri/src/ingest/: dedup.rs  mod.rs  normalize.rs
tokenlens/src-tauri/src/pricing/: mod.rs
tokenlens/src-tauri/src/settings/: mod.rs
tokenlens/src-tauri/tests/fixtures/: sample-opencode.jsonl
tokenlens/src/charts/: index.tsx
tokenlens/src/components/cards/: StatCard.tsx
tokenlens/src/components/layout/: Topbar.tsx
tokenlens/src/components/ui/: primitives.tsx
tokenlens/src/lib/: mock.ts  tauri.ts  utils.ts
tokenlens/src/pages/: Costs.tsx  Models.tsx  Overview.tsx  Projects.tsx  Providers.tsx  RawEvents.tsx  SessionDetail.tsx  Sessions.tsx  Settings.tsx  Timeline.tsx
tokenlens/src/stores/: filter.ts
tokenlens/src/types/: contracts.ts
