[package]
name = "tokenlens"
version = "0.1.0"
description = "TokenLens — local-first AI token and cost analytics."
authors = ["TokenLens Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tokenlens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-autostart = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
once_cell = "1.20"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Hashing / ids
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

# Regex
regex = "1.10"

# Errors
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# System paths
dirs = "5"

# CSV
csv = "1.3"

# HTTP (for optional local collector endpoint in Phase 5)
# axum is pulled in lazily; keep optional for now

# Misc
walkdir = "2.5"
bytecount = "0.6"
rayon = "1.10"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
